--- a/assets/styles/css/app.css
+++ b/assets/styles/css/app.css
@@ -1,8 +1,3 @@
-* {
-	margin: 0;
-	padding: 0;
-}
-
 html {
 	width: 100%;
 	padding: 30px 0;
@@ -10,4 +5,13 @@ html {
 	overflow-y: overlay;
 	overflow-x: hidden;
 	scroll-behavior: smooth;
+}
+
+html.dark {
+	background-color: var(--color-gray-900) !important;
+}
+
+html.light {
+	background-color: white !important;
+	color: black;
 }
