--- a/assets/styles/css/app.css
+++ b/assets/styles/css/app.css
@@ -8,7 +8,7 @@ html {
 }
 
 html.dark {
-	background-color: var(--color-gray-900) !important;
+	background-color: var(--color-zinc-900) !important;
 }
 
 html.light {
