Refactor layout configuration and update font settings in app

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -5,6 +5,10 @@
  * CSS
  */
 @import "../../assets/styles/css/app.css";
-@import "../../assets/styles/css/fonts.css";
 @import "../../assets/styles/css/width.css";
 @import "../../assets/styles/css/shapes.css";
+
+/* Fonts */
+@theme {
+	--font-sans: 'Manrope', sans-serif;
+}
