--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -6,10 +6,9 @@
  */
 @import "../../assets/styles/css/app.css";
 @import "../../assets/styles/css/width.css";
-@import "../../assets/styles/css/shapes.css";
 
 /* Fonts */
 @theme {
-	--font-sans: 'Manrope', sans-serif;
-	--font-mono: 'IBM Plex Mono', monospace;
+	--font-sans: "Manrope", sans-serif;
+	--font-mono: "IBM Plex Mono", monospace;
 }
